basic ppm image io

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.26)
 project(cmplx-plot-1.0)
 
 set(CXX_STANDARD 20)
+
+add_compile_options(-g -O0 -std=c++20)
 add_subdirectory(main)
