fully functional/bug tested, added file for jpg

--- a/main/src/CMakeLists.txt
+++ b/main/src/CMakeLists.txt
@@ -3,4 +3,4 @@ include_directories(${cmplx-plot-1.0_SOURCE_DIR}/main/include)
 set(EXECUTABLE_OUTPUT_PATH ${cmplx-plot-1.0_SOURCE_DIR}/bin)
 
 
-add_executable(cmplx-plot-1.0 main.cpp)
+add_executable(cmplx-plot-1.0 main.cpp toojpeg.cpp)
