fully functional multithreading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cmplx-plot-1.0)
 
 set(CXX_STANDARD 20)
 
-add_compile_options(-g -O0 -pthread -std=c++20 -Wall -Wpedantic)
+add_compile_options(-g -Ofast -lpthread -pthread -std=c++20 -Wall -Wpedantic)
 add_subdirectory(main)
