--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cmplx-plot-1.0)
 
 set(CXX_STANDARD 20)
 
-add_compile_options(-g -Og -pthread -std=c++20 -Wall -Wpedantic -Werror)
+add_compile_options(-O3 -pthread -std=c++20 -Wall -Wpedantic)
 add_subdirectory(main)
