converted to .so format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,17 @@
 cmake_minimum_required(VERSION 3.22)
-project(cmplx-plot-1.0)
+project(cplot LANGUAGES CXX VERSION 1.1 DESCRIPTION "Plot complex-valued functions to bitmaps")
 
 set(CXX_STANDARD 20)
 
-add_compile_options(-O3 -pthread -std=c++20 -Wall -Wpedantic)
-add_subdirectory(main)
+include_directories({PROJECT_SOURCE_DIR}/include/**)
+
+add_library(cplot SHARED 
+    src/libcplot.cpp 
+    src/toojpeg.cpp 
+)
+
+set_target_properties(cplot PROPERTIES PUBLIC_HEADER libcplot.hpp)
+
+target_include_directories(cplot PRIVATE include)
+
+include(GNUInstallDirs)
