--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CXX_STANDARD 20)
 
 include_directories({PROJECT_SOURCE_DIR}/include/**)
 
-add_library(cplot SHARED 
+add_library(cplot STATIC 
     src/libcplot.cpp 
     src/toojpeg.cpp 
 )
@@ -15,3 +15,9 @@ set_target_properties(cplot PROPERTIES PUBLIC_HEADER libcplot.hpp)
 target_include_directories(cplot PRIVATE include)
 
 include(GNUInstallDirs)
+
+install(
+    TARGETS cplot 
+    LIBRARY DESTINATION ${CMAKE_INSTALL_DIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
