Update CMakeLists.txt to reflect submodule changes

--- a/main/src/CMakeLists.txt
+++ b/main/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_include_directories(cplot ../include)
+target_include_directories(cplot ../include ../include/expr_parsing_cpp/src)
 
 set(EXECUTABLE_OUTPUT_PATH ${cmplx-plot-1.0_SOURCE_DIR}/bin)
 
