--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: config
       run: mkdir build && cd build
+    - name: check
+      run: dir
     - name: cmake
       run: cmake ..
     - name: make
