--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "include/expr_parsing_cpp"]
 	path = include/expr_parsing_cpp
 	url = https://github.com/davidl09/expr_parsing_cpp
+[submodule "include/astParser"]
+	path = include/astParser
+	url = git@github.com:davidl09/astParser
